--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<div class="container mt-2">
-    <button class="btn btn-danger float-end" (click)="logout()">Logout</button>
-  </div>
+<app-header *ngIf="showHeader"></app-header>
 <router-outlet></router-outlet>
