Header and logo

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,11 +1,11 @@
 <header class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Timetable Management</a>
-  
-      <div class="d-flex align-items-center">
-        <span class="me-3">Welcome, {{ username }}!</span>
-        <button class="btn btn-outline-danger btn-sm" (click)="logout()">Logout</button>
-      </div>
+        <img src="assets/BWMLogo.png" alt="BunkWithMe Logo" class="logo me-3 rounded-circle" />
+        <a class="navbar-brand fancy-font" href="#">BunkWithMe</a>
+
+        <div class="d-flex align-items-center">
+            <span class="me-3">Welcome, {{ username }}!</span>
+            <button class="btn btn-outline-danger btn-sm" (click)="logout()">Logout</button>
+        </div>
     </div>
-  </header>
-  
+</header>
