--- a/src/app/Feature/time-table/date-timetable-details/date-timetable-details.component.scss
+++ b/src/app/Feature/time-table/date-timetable-details/date-timetable-details.component.scss
@@ -8,6 +8,7 @@
   }
   
   .sticky-col {
+    cursor: pointer;
     position: sticky;
     left: 0;
     background-color: #f8f9fa; /* Match the table's background */
